[package]
name = "serde_shims"
version = "0.1.0"
authors = ["novacrazy <novacrazy@gmail.com>"]
license = "MIT"
description = "Community Driven Serde Shims"
documentation = ""
keywords = ["serde", "shim"]

[dependencies]
serde = "1.0.66"
mime = { version = "0.3.7", optional = true }

[dev-dependencies]
serde_json = "1.0.20"
serde_derive = "1.0.66"