[package]
name = "serde_shims"
version = "0.1.2"
authors = ["novacrazy <novacrazy@gmail.com>"]
license = "MIT"
description = "Community Driven Serde Shims"
documentation = "https://novacrazy.github.io/serde_shims/"
repository = "https://github.com/novacrazy/serde_shims"
categories = ["encoding"]
keywords = ["serde", "shim"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[features]
std = []

[badges]
travis-ci = { repository = "novacrazy/serde_shims" }

[dependencies]
serde = "1.0.66"
mime = { version = "0.3.7", optional = true }
chrono = { version = "0.4.3", optional = true }
enum_primitive = { version = "0.1.1", optional = true }
bitflags = { version = "1.0.3", optional = true }

[dev-dependencies]
serde_json = "1.0.20"
serde_derive = "1.0.66"
