[package]
name = "bitflags_serde_shim"
version = "0.2.3"
authors = ["novacrazy <novacrazy@gmail.com>"]
license = "MIT"
description = "Community Driven Serde Shims"
documentation = "https://novacrazy.github.io/serde_shims/"
repository = "https://github.com/novacrazy/serde_shims"
categories = ["encoding"]
keywords = ["serde", "shim", "bitflags"]
readme = "../README.md"

[badges]
travis-ci = { repository = "novacrazy/serde_shims" }

[features]
default = ["std"]
std = []

[dependencies]
serde = { version = "1.0", default_features = false }
bitflags = "1.0"

[dev-dependencies]
serde_json = "1.0"
serde_derive = "1.0"
