[package]
name = "enum_primitive_serde_shim"
version = "0.2.0"
authors = ["novacrazy <novacrazy@gmail.com>"]
license = "MIT"
description = "Community Driven Serde Shims"
documentation = "https://novacrazy.github.io/serde_shims/"
repository = "https://github.com/novacrazy/serde_shims"
categories = ["encoding"]
keywords = ["serde", "shim", "enum_primitive"]

[dependencies]
serde = "1.0"
enum_primitive = "0.1"

[dev-dependencies]
serde_json = "1.0"
serde_derive = "1.0"
