[package]
name = "mime_serde_shim"
version = "0.2.1"
authors = ["novacrazy <novacrazy@gmail.com>"]
license = "MIT"
description = "Community Driven Serde Shims"
documentation = "https://novacrazy.github.io/serde_shims/"
repository = "https://github.com/novacrazy/serde_shims"
categories = ["encoding"]
keywords = ["serde", "shim", "mime"]
readme = "../README.md"

[badges]
travis-ci = { repository = "novacrazy/serde_shims" }

[dependencies]
serde = "1.0"
mime = "0.3"

[dev-dependencies]
serde_json = "1.0"
serde_derive = "1.0"
