[package]
name = "serde_shims"
version = "0.1.2"
authors = ["novacrazy <novacrazy@gmail.com>"]
license = "MIT"
description = "Community Driven Serde Shims"
documentation = "https://novacrazy.github.io/serde_shims/"
repository = "https://github.com/novacrazy/serde_shims"
categories = ["encoding"]
keywords = ["serde", "shim"]

publish = false

[dependencies]
bitflags_serde_shim = { path = "../bitflags_serde_shim" }
mime_serde_shim = { path = "../mime_serde_shim" }
std_serde_shims = { path = "../std_serde_shims" }
enum_primitive_serde_shim = { path = "../enum_primitive_serde_shim" }