[package]
name = "serde_shims"
version = "0.2.2"
authors = ["novacrazy <novacrazy@gmail.com>"]
license = "MIT"
description = "Community Driven Serde Shims"
documentation = "https://novacrazy.github.io/serde_shims/"
repository = "https://github.com/novacrazy/serde_shims"
categories = ["encoding"]
keywords = ["serde", "shim"]
readme = "../README.md"

# publish = false

[badges]
travis-ci = { repository = "novacrazy/serde_shims" }

[dependencies]
bitflags_serde_shim = { version = "0.2", optional = true } # , path = "../bitflags" }
mime_serde_shim = { version = "0.2", optional = true } # , path = "../mime" }
std_serde_shims = { version = "0.2", optional = true } # , path = "../std" }
enum_primitive_serde_shim = { version = "0.2", optional = true } # , path = "../enum_primitive" }

[features]
default = ["std"]
std = ["std_serde_shims", "bitflags_serde_shim/std", "enum_primitive_serde_shim/std"]
bitflags = ["bitflags_serde_shim"]
mime = ["mime_serde_shim"]
enum_primitive = ["enum_primitive_serde_shim"]


[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
all-features = true