[package]
name = "std_serde_shims"
version = "0.2.1"
authors = ["novacrazy <novacrazy@gmail.com>"]
license = "MIT"
description = "Community Driven Serde Shims"
documentation = "https://novacrazy.github.io/serde_shims/"
repository = "https://github.com/novacrazy/serde_shims"
categories = ["encoding"]
keywords = ["serde", "shim"]
readme = "../README.md"

[badges]
travis-ci = { repository = "novacrazy/serde_shims" }

[dependencies]
serde = "1.0"

[dev-dependencies]
serde_json = "1.0"
serde_derive = "1.0"
