[package]
name = "std_serde_shims"
version = "0.1.2"
authors = ["novacrazy <novacrazy@gmail.com>"]
license = "MIT"
description = "Community Driven Serde Shims"
documentation = "https://novacrazy.github.io/serde_shims/"
repository = "https://github.com/novacrazy/serde_shims"
categories = ["encoding"]
keywords = ["serde", "shim"]

[dependencies]
serde = "1.0.66"

[dev-dependencies]
serde_json = "1.0.20"
serde_derive = "1.0.66"
